# nova-trader

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GLOSSARY.md  README.md  TECH_SPEC.md  pyproject.toml  test_imports.py
.github/workflows/: ci.yml  deploy.yml
docs/: agents-explained.md  analyst-numbers-audit.md  analyst-trust-audit.md  architecture.md  codebase-audit.md  deep-analyst-audit-update.md  demo_script.md  glossary.md  methodology-exec.html  methodology-pager.html  methodology-simple.md  methodology.html  mvp_scope.md  product_flow.md  three_month_scope.md  v0_architecture.md
docs/diagrams/: 01_product_pov.swimlanes  02_recommendation_runtime.swimlanes  03_model_router_pov.swimlanes
scripts/: render_analyst_audit.py
src/: __init__.py  aggregator.py  backtest_adapter.py  chat_cli.py  cli.py  engine.py  main.py  registry.py  runs.py  slicer.py  snapshot.py
src/agents/: _sentiment.py  _text.py  adaptive_research.py  explain.py  fundamentals.py  growth.py  harness.py  insider_sentiment.py  loader.py  news_sentiment.py  portfolio.py  reddit_sentiment.py  risk.py  scoring.py  sec_filings.py  technical.py  valuation.py  warren_buffett.py  web_research.py
src/agents/math/: growth_agent.py  news_sentiment.py  risk_manager.py  technicals.py  valuation.py
src/agents/templates/configs/: aswath_damodaran.yaml  ben_graham.yaml  bill_ackman.yaml  cathie_wood.yaml  charlie_munger.yaml  michael_burry.yaml  mohnish_pabrai.yaml  peter_lynch.yaml  phil_fisher.yaml  rakesh_jhunjhunwala.yaml  stanley_druckenmiller.yaml  warren_buffett.yaml
src/alpha/: __init__.py
src/alpha/features/: __init__.py  factor.py  fundamental.py  sentiment.py  technical.py
src/backtesting/: __init__.py  cli.py  costs.py  metrics.py  portfolio.py  trader.py  types.py  valuation.py
src/chat/: __init__.py  context.py  models.py  rendering.py  routing.py  signal_card.py  theme.py
src/cli/: __init__.py  __main__.py  app.py
src/core/: __init__.py  config.py  engine.py  models.py  pad.py  pipeline.py  service.py  signals.py
src/data/: __init__.py  api.py  cache.py  memory.py  models.py  universe.py
src/debate/: __init__.py  engine.py  eval_harness.py  filings_rag.py  local_fallback.py  market_context.py  recorder.py
src/evals/: __init__.py  walkforward.py
src/execution/: __init__.py  alpaca.py  audit.py  base.py  bridge.py  circuit_breaker.py
src/llm/: api_models.json  models.py
src/orchestrator/: __init__.py  pipeline.py
src/portfolio/: __init__.py  construction.py
src/recommender/: __init__.py  schemas.py
src/risk/: __init__.py  limits.py
src/router/: __init__.py  base.py  schemas.py
src/schemas/: __init__.py  context.py  portfolio.py  signals.py  snapshot.py  views.py
src/tools/: api.py  community.py  reddit.py  sec_filings.py  web_search.py  yfinance_fallback.py
src/utils/: __init__.py  analysts.py  display.py  llm.py  logger.py  progress.py  telegram.py  visualize.py
src/web/: __init__.py  server.py
src/web/static/: __init__.py  analyst-methodology.html  analyst-numbers-audit.html  analyst-trust-audit.html  index.html
tests/: __init__.py  test_api_rate_limiting.py  test_chat_cli.py  test_chat_streaming.py  test_circuit_breaker.py  test_core_pipeline.py  test_cost_model.py  test_factor_investing.py  test_fibonacci.py  test_recent_runs.py  test_registry.py  test_risk_limits.py  test_signal.py  test_signal_cards.py  test_valuation_target_and_stars.py  test_voting.py  test_walkforward.py  test_web_server.py
tests/agents/: test_adaptive_research_agent.py  test_news_sentiment_schema.py  test_portfolio_manager.py  test_reddit_sentiment_agent.py  test_sec_filings_agent.py  test_sentiment_module.py  test_web_research_agent.py
tests/backtesting/: conftest.py  test_execution.py  test_metrics.py  test_portfolio.py  test_valuation.py
tests/debate/: test_eval_harness.py  test_market_context.py
tests/recommender/: test_recommender_schemas.py
tests/router/: test_router_schemas.py
tests/tools/: test_community_tool.py  test_reddit_tool.py  test_web_search.py  test_yfinance_fallback_statements.py
tests/utils/: test_llm.py
(+1 files in other folders)
