[tool.poetry]
name = "nova-trader"
version = "0.1.0"
description = "Multi-agent AI trading system — research, signals, and execution"
authors = []
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"

# LangChain core + LLM providers (NO langgraph)
langchain = "^0.3.7"
langchain-anthropic = "0.3.5"
langchain-groq = "0.2.3"
langchain-openai = "^0.3.5"
langchain-deepseek = "^0.1.2"
langchain-ollama = "0.3.6"
langchain-google-genai = "^2.0.11"
langchain-gigachat = "^0.3.12"
langchain-xai = "^0.2.5"

# Data & computation
pandas = "^2.1.0"
numpy = "^1.24.0"
requests = "^2.31.0"

# Models & validation
pydantic = "^2.4.2"

# Agent templates
jinja2 = "^3.1.0"
pyyaml = "^6.0"

# CLI & display
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
colorama = "^0.4.6"
questionary = "^2.1.0"
rich = "^13.9.4"
prompt_toolkit = "^3.0.0"

# Date handling
python-dateutil = "^2.8.0"

# Future: uncomment as you integrate
# alpaca-py = "^0.35.0"
# yfinance = "^0.2.28"
# praw = "^7.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.poetry.scripts]
nova = "src.cli.app:main"
trade = "src.main:main"
backtester = "src.backtesting.cli:main"
